--- a/index.html
+++ b/index.html
@@ -26,8 +26,257 @@
         <div class="intro__inner">
             <h2 class="intro__subtitle">Creative Template</h2>
             <h1 class="intro__title">Welcome to MoGo</h1>
+            <a href="#" class="btn">Learn more</a>
+        </div>
+        <div class="slider">
+            <div class="slider__item active">
+                <span class="slider__num">01 </span>Intro
+            </div>
+            <div class="slider__item">
+                <span class="slider__num">02 </span>Work
+            </div>
+            <div class="slider__item">
+                <span class="slider__num">03 </span>About
+            </div>
+            <div class="slider__item">
+                <span class="slider__num">04 </span>Contacts
+            </div>
         </div>
     </div>
 </div>
+<section class="section">
+    <div class="container">
+
+        <div class="section__header">
+            <h3 class="section__subtitle">What we do</h3>
+            <h2 class="section__title">story about us</h2>
+            <div class="section__text">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+            </div>
+        </div>
+        <div class="about">
+            <div class="about__item">
+               <div class="about__img">
+                    <img src="img/section_1.png" alt="">
+                </div>
+                <div class="about__content">
+                   <img class="about__icon" src="img/users__icon.png" alt="">
+                    <div class="about__text">super team</div>
+                </div>
+            </div>
+
+            <div class="about__item">
+               <div class="about__img">
+                    <img src="img/section_2.png" alt="">
+                </div>
+                <div class="about__content">
+                   <img class="about__icon" src="img/users__icon.png" alt="">
+                    <div class="about__text">super team</div>
+                </div>
+            </div>
+
+            <div class="about__item">
+               <div class="about__img">
+                    <img src="img/section_3.png" alt="">
+                </div>
+                <div class="about__content">
+                   <img class="about__icon" src="img/users__icon.png" alt="">
+                    <div class="about__text">super team</div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</section>
+<div class="statistic">
+    <div class="container">
+       <div class="stat">
+        <div class="statistic__item">
+            <div class="statistic__number">42</div>
+            <div class="statistic__text">Web Design Projects</div>
+        </div>
+
+         <div class="statistic__item">
+            <div class="statistic__number">123</div>
+            <div class="statistic__text">happy client</div>
+        </div>
+
+         <div class="statistic__item">
+            <div class="statistic__number">15</div>
+            <div class="statistic__text">award winner</div>
+        </div>
+
+         <div class="statistic__item">
+            <div class="statistic__number">99</div>
+            <div class="statistic__text">cup of coffee</div>
+        </div>
+
+         <div class="statistic__item">
+            <div class="statistic__number">24</div>
+            <div class="statistic__text">members</div>
+        </div>
+    </div>
+    </div>
+</div>
+
+
+<section class="section"> <!-- Section -->
+    <div class="container">
+
+        <div class="section__header">
+            <h3 class="section__subtitle">We work with</h3>
+            <h2 class="section__title">Amazing Services</h2>
+        </div>
+
+        <div class="services">
+            <div class="services__item">
+               <div class="services__icon">
+                   <img src="img/serviced__icon1.png" class="" alt="">
+               </div>
+                <div class="services__content">
+                    <div class="services__title">Photography</div>
+                    <div class="secvices__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</div>
+                </div>
+            </div>
+
+            <div class="services__item">
+               <div class="services__icon">
+                   <img src="img/services__icon2.png" class="" alt="">
+               </div>
+                <div class="services__content">
+                    <div class="services__title">Web Design</div>
+                    <div class="secvices__text">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</div>
+                </div>
+            </div>
+
+            <div class="services__item">
+               <div class="services__icon">
+                   <img src="img/services__icon3.png" class="" alt="">
+               </div>
+                <div class="services__content">
+                    <div class="services__title">Creativity</div>
+                    <div class="secvices__text">LDolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</div>
+                </div>
+            </div>
+
+            <div class="services__item">
+               <div class="services__icon">
+                   <img src="img/services__icon4.png" class="" alt="">
+               </div>
+                <div class="services__content">
+                    <div class="services__title">seo</div>
+                    <div class="secvices__text">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</div>
+                </div>
+            </div>
+
+            <div class="services__item">
+               <div class="services__icon">
+                   <img src="img/services__icon5.png" class="" alt="">
+               </div>
+                <div class="services__content">
+                    <div class="services__title">Css/Html</div>
+                    <div class="secvices__text">Lorem dolor sit amet, consectetur adipiscing elit, sed do tempor.</div>
+                </div>
+            </div>
+
+            <div class="services__item">
+               <div class="services__icon">
+                   <img src="img/services__icon6.png" class="" alt="">
+               </div>
+                <div class="services__content">
+                    <div class="services__title">digital</div>
+                    <div class="secvices__text">Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</div>
+                </div>
+            </div>
+        </div> <!-- services -->
+
+    </div> <!-- container -->
+</section>
+
+<section class="section section--design">
+    <div class="container">
+         <div class="section__header">
+            <h3 class="section__subtitle">For all devices</h3>
+            <h2 class="section__title">Unique design</h2>
+        </div>
+    </div>
+        <div class="design__photo">
+            <img src="img/design_tablet.png" class="design__item" alt="">
+            <img src="img/design_mobile.png" class="design__item design__item--iphone" alt="">
+        </div>
+</section> <!-- Section--design -->
+<section class="section">
+    <div class="container">
+       <div class="section__header">
+            <h3 class="section__subtitle">Service</h3>
+            <h2 class="section__title">what we do</h2>
+            <div class="section__text">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
+        </div>
+
+        <div class="wedo">
+            <div class="wedo__item">
+                <img src="img/service.png" alt="" class="wedo__photo">
+            </div>
+            <div class="wedo__item">
+            <div class="accordion">
+               <div class="accordion__item">
+                <div class="accordion__header">
+                   <img class="accordion__icon" src="img/photography.png" alt="">
+                    <div class="accordion__title">Photography</div>
+                </div>
+                <div class="accordion__content"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>
+                </div> <!-- accordion__item -->
+
+                <div class="accordion__item active">
+                <div class="accordion__header">
+                   <img class="accordion__icon" src="img/creativity.png" alt="">
+                    <div class="accordion__title">creativity</div>
+                </div>
+                <div class="accordion__content"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>
+                </div>
+                <div class="accordion__item">
+                <div class="accordion__header">
+                   <img class="accordion__icon" src="img/web.png" alt="">
+                    <div class="accordion__title">web design</div>
+                </div>
+                <div class="accordion__content"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>
+                </div>
+              </div> <!--accordion -->
+            </div>
+        </div> <!-- Wedo -->
+    </div>
+</section>
+
+
+
+
+
+
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
