new blocks reviews and team

--- a/index.html
+++ b/index.html
@@ -249,6 +249,89 @@
     </div>
 </section>
 
+<div class="section">
+    <div class="container">
+
+          <div class="reviews">
+           <a href="#" class="reviews__btn reviews__btn-prev">Prev</a>
+           <a href="#" class="reviews__btn reviews__btn-next">next</a>
+
+            <div class="reviews__item">
+                <img src="img/reviews__icon.png" class="reviews__icon" alt="">
+                <div class="reviews__text">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.”
+                </div>
+                <div class="reviews__name">Jon Doe</div>
+            </div>
+
+        </div>
+
+    </div>
+</div>
+
+<section class="section">
+    <div class="container">
+
+        <div class="section__header">
+            <h3 class="section__subtitle">Who we are</h3>
+            <h2 class="section__title">Meet our team</h2>
+            <div class="section__text"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p></div>
+        </div>
+        <div class="team">
+
+            <div class="team__item">
+               <div class="team__photo">
+                    <img src="img/team1.png">
+                </div>
+                <div class="team__social">
+                    <img class="team__fb">
+                    <img class="team_tw">
+                    <img class="team__pst">
+                    <img class="team__inst">
+                </div>
+            </div>
+
+            <div class="team__item">
+                <div class="team__photo">
+                    <img src="img/team2.png">
+                </div>
+                <div class="team__social">
+                    <img class="team__fb">
+                    <img class="team_tw">
+                    <img class="team__pst">
+                    <img class="team__inst">
+                </div>
+            </div>
+
+
+            <div class="team__item">
+                <div class="team__photo">
+                    <img src="img/team3.png">
+                </div>
+                <div class="team__social">
+                    <img class="team__fb">
+                    <img class="team_tw">
+                    <img class="team__pst">
+                    <img class="team__inst">
+                </div>
+            </div>
+
+            <div class="team__content">
+               <div class="team__name">Matthew Dix</div>
+               <div class="team__prof">Graphic Design</div>
+            </div>
+            <div class="team__content">
+               <div class="team__name">Christopher Campbell</div>
+               <div class="team__prof">Branding/UX design</div>
+            </div>
+            <div class="team__content">
+               <div class="team__name">Michael Fertig </div>
+               <div class="team__prof">Developer</div>
+            </div>
+
+        </div>
+    </div>
+
+</section>
 
 
 
