new block Works and logos

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700|Roboto:300,300i,400,400i&display=swap" rel="stylesheet">
+   <script src="https://kit.fontawesome.com/e31364d317.js" crossorigin="anonymous"></script>
     <title>MoGo</title>
 </head>
 <body>
@@ -249,7 +250,7 @@
     </div>
 </section>
 
-<div class="section">
+<div class="section section-gray">
     <div class="container">
 
           <div class="reviews">
@@ -282,23 +283,39 @@
                <div class="team__photo">
                     <img src="img/team1.png">
                 </div>
-                <div class="team__social">
-                    <img class="team__fb">
-                    <img class="team_tw">
-                    <img class="team__pst">
-                    <img class="team__inst">
-                </div>
+                    <div class="social">
+                        <a class="team__social" href="" target="_blank">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                        <a class="team__social" href="" target="_blank">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                        <a class="team__social" href="" target="_blank">
+                            <i class="fab fa-pinterest-p"></i>
+                        </a>
+                        <a class="team__social" href="" target="_blank">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                    </div>
             </div>
 
             <div class="team__item">
                 <div class="team__photo">
                     <img src="img/team2.png">
                 </div>
-                <div class="team__social">
-                    <img class="team__fb">
-                    <img class="team_tw">
-                    <img class="team__pst">
-                    <img class="team__inst">
+                <div class="social">
+                    <a class="team__social" href="" target="_blank">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a class="team__social" href="" target="_blank">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a class="team__social" href="" target="_blank">
+                        <i class="fab fa-pinterest-p"></i>
+                    </a>
+                    <a class="team__social" href="" target="_blank">
+                        <i class="fab fa-instagram"></i>
+                    </a>
                 </div>
             </div>
 
@@ -307,11 +324,19 @@
                 <div class="team__photo">
                     <img src="img/team3.png">
                 </div>
-                <div class="team__social">
-                    <img class="team__fb">
-                    <img class="team_tw">
-                    <img class="team__pst">
-                    <img class="team__inst">
+                <div class="social">
+                    <a class="team__social" href="" target="_blank">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a class="team__social" href="" target="_blank">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a class="team__social" href="" target="_blank">
+                        <i class="fab fa-pinterest-p"></i>
+                    </a>
+                    <a class="team__social" href="" target="_blank">
+                        <i class="fab fa-instagram"></i>
+                    </a>
                 </div>
             </div>
 
@@ -334,8 +359,91 @@
 </section>
 
 
+<div class="section section-gray">
+    <div class="container">
+        <div class="logo">
+            <img src="img/Logos.png" class="" alt="">
+        </div>
+    </div>
+</div>
+
+<section class="section">
 
 
+        <div class="section__header">
+            <h3 class="section__subtitle">What we do</h3>
+            <h2 class="section__title">some of our work</h2>
+            <div class="section__text">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+            </div>
+        </div>
+        <div class="work">
+            <div class="work__cols">
+                <div class="work__item">
+                    <img src="img/out_work1.png" alt="" class="work__img">
+                    <div class="work__info">
+                        <img src="img/work_img.png">
+                        <div class="work__title">creatively designed</div>
+                        <div class="work__text">Lorem ipsum dolor sit</div>
+                    </div>
+                </div>
+                <div class="work__item">
+                    <img src="img/out_work5.png" alt="" class="work__img">
+                    <div class="work__info">
+                        <img src="img/work_img.png">
+                        <div class="work__title">creatively designed</div>
+                        <div class="work__text">Lorem ipsum dolor sit</div>
+                    </div>
+                </div>
+            </div>
+            <div class="work__cols">
+                <div class="work__item">
+                    <img src="img/out_work2.png" alt="" class="work__img">
+                    <div class="work__info">
+                        <img src="img/work_img.png">
+                        <div class="work__title">creatively designed</div>
+                        <div class="work__text">Lorem ipsum dolor sit</div>
+                    </div>
+                </div>
+                <div class="work__item">
+                    <img src="img/out_work6.png" alt="" class="work__img">
+                    <div class="work__info">
+                        <img src="img/work_img.png">
+                        <div class="work__title">creatively designed</div>
+                        <div class="work__text">Lorem ipsum dolor sit</div>
+                    </div>
+                </div>
+            </div>
+            <div class="work__cols">
+                <div class="work__item">
+                    <img src="img/out_work3.png" alt="" class="work__img">
+                    <div class="work__info">
+                        <img src="img/work_img.png">
+                        <div class="work__title">creatively designed</div>
+                        <div class="work__text">Lorem ipsum dolor sit</div>
+                    </div>
+                </div>
+            </div>
+            <div class="work__cols">
+                <div class="work__item">
+                    <img src="img/out_work4.png" alt="" class="work__img">
+                    <div class="work__info">
+                        <img src="img/work_img.png">
+                        <div class="work__title">creatively designed</div>
+                        <div class="work__text">Lorem ipsum dolor sit</div>
+                    </div>
+                </div>
+                <div class="work__item">
+                    <img src="img/out_work7.png" alt="" class="work__img">
+                    <div class="work__info">
+                        <img src="img/work_img.png">
+                        <div class="work__title">creatively designed</div>
+                        <div class="work__text">Lorem ipsum dolor sit</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+</section>
 
 </body>
 </html>
