--- a/index.html
+++ b/index.html
@@ -444,6 +444,138 @@
             </div>
         </div>
 </section>
+<div class="section">
+    <div class="container">
+
+          <div class="reviews">
+           <a href="#" class="reviews__btn reviews__btn-prev">Prev</a>
+           <a href="#" class="reviews__btn reviews__btn-next">next</a>
+
+            <div class="reviews__item">
+                <img src="img/reviews__icon2.png" class="reviews__icon" alt="">
+                <div class="reviews__text reviews__text__2">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.”
+                </div>
+                <div class="reviews__name reviews__name__2">Joshua Earle</div>
+            </div>
+
+        </div>
+
+    </div>
+</div>
+
+<section class="section section--clients">
+   <div class="container">
+        <div class="section__header">
+            <h3 class="section__subtitle">Happy Clients</h3>
+            <h2 class="section__title">What people say</h2>
+        </div>
+        <div class="clients">
+
+            <div class="clients__item">
+                <img src="img/clients__photo1.png" alt="" class="clients__photo">
+                <div class="clients__name">Matthew Dix</div>
+                <div class="clients__prof">Graphic Design</div>
+                <div class="clients__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</div>
+            </div>
+
+            <div class="clients__item">
+                <img src="img/clients__photo2.png" alt="" class="clients__photo">
+                <div class="clients__name">Jaelynn Castillo </div>
+                <div class="clients__prof">Graphic Design</div>
+                <div class="clients__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</div>
+            </div>
+
+            <div class="clients__item">
+                <img src="img/Clients_photo3.png" alt="" class="clients__photo">
+                <div class="clients__name">Nick Karvounis</div>
+                <div class="clients__prof">Graphic Design</div>
+                <div class="clients__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</div>
+            </div>
+
+            <div class="clients__item">
+                <img src="img/clients_photo4.png" alt="" class="clients__photo">
+                <div class="clients__name">Mike Petrucci</div>
+                <div class="clients__prof">Graphic Design</div>
+                <div class="clients__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</div>
+            </div>
+
+        </div>
+    </div>
+</section>
+<section class="section">
+   <div class="container">
+        <div class="section__header">
+            <h3 class="section__subtitle">Our stories</h3>
+            <h2 class="section__title">Latest blog</h2>
+        </div>
+        <div class="blog">
+
+            <div class="blog__item">
+                <div class="blog__header">
+                    <img class="blog__photo" src="img/blog1.png">
+                    <div class="blog__data">
+                        <img src="img/blog_data1.png">
+                    </div>
+                </div>
+                <div class="blog__content">
+                    <div class="blog__title">Lorem ipsum dolor sit amet</div>
+                    <div class="blog__text">Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+                </div>
+                <div class="blog__footer">
+                    <i class="fas fa-eye"></i><span class="eye">542</span>
+                    <i class="far fa-comment-dots"></i><span class="com">17</span>
+                </div>
+            </div>
+
+            <div class="blog__item">
+                <div class="blog__header">
+                    <img class="blog__photo" src="img/blog2.png">
+                    <div class="blog__data">
+                        <img src="img/blog_data2.png">
+                    </div>
+                </div>
+                <div class="blog__content">
+                    <div class="blog__title">sed do eiusmod tempor</div>
+                    <div class="blog__text">Adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+                </div>
+                <div class="blog__footer">
+                    <i class="fas fa-eye"></i><span class="eye">992</span>
+                    <i class="far fa-comment-dots"></i><span class="com">42</span>
+                </div>
+            </div>
+
+            <div class="blog__item">
+                <div class="blog__header">
+                    <img class="blog__photo" src="img/blog3.png">
+                    <div class="blog__data">
+                        <img src="img/blog_data3.png">
+                    </div>
+                </div>
+                <div class="blog__content">
+                    <div class="blog__title">Lincididunt ut labore et dolore</div>
+                    <div class="blog__text">Elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+                </div>
+                <div class="blog__footer">
+                    <i class="fas fa-eye"></i><span class="eye">1560</span>
+                    <i class="far fa-comment-dots"></i><span class="com">98</span>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+</section>
+
+<section class="section">
+    <div class="map">
+        <img src="img/map2.png" class="map__photo" alt="">
+        <div class="map__text">Open map</div>
+    </div>
+</section>
+
+
+
+
 
 </body>
 </html>
