new block footer

--- a/index.html
+++ b/index.html
@@ -566,13 +566,63 @@
 
 </section>
 
-<section class="section">
+<section class="section section-map">
     <div class="map">
         <img src="img/map2.png" class="map__photo" alt="">
-        <div class="map__text">Open map</div>
+        <a href="#" target="_blank" class="map__text">Open map</a>
     </div>
 </section>
 
+<footer class="footer">
+    <div class="container">
+        <div class="footer__inner">
+            <div class="footer__col footer__col--1">
+                <div class="footer__logo">MOGO</div>
+                <div class="footer__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </div>
+                <div class="footer__social">
+                    <div class="footer__social-header"><b>15k</b> followers</div>
+                    <div class="footer__social-content">
+                        Follow Us:
+                        <a href="#">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fab fa-pinterest-p"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fab fa-google-plus-g"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fab fa-youtube"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fab fa-dribbble"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fab fa-tumblr"></i>
+                        </a>
+                    </div>
+                </div>  <!-- footer__social -->
+                <form action="/" class="subscribe" method="post">
+                    <input class="subcribe__input" type="email" name="name" placeholder="Your Email...">
+                    <button class="subcribe__btn" type="submit">Subscribe</button>
+                </form>
+            </div> <!-- footer__col -->
+            <div class="footer__col footer__col--2">
+                <div class="footer__title">blogs</div>
+            </div>
+            <div class="footer__col footer__col--3">
+                <div class="footer__title">instagram</div>
+            </div>
+        </div> <!-- footer__inner -->
+    </div>
+</footer>
 
 
 
