--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
                 <a class="nav__link" href="#">work</a>
                 <a class="nav__link" href="#">blog</a>
                 <a class="nav__link" href="#">contact</a>
+                <a class="nav__link" href="#">
+                    <i class="fas fa-shopping-cart"></i>
+                </a>
+                <a class="nav__link" href="#">
+                    <i class="fas fa-search"></i>
+                </a>
             </nav>
         </div>
     </div>
@@ -613,17 +619,89 @@
                     <input class="subcribe__input" type="email" name="name" placeholder="Your Email...">
                     <button class="subcribe__btn" type="submit">Subscribe</button>
                 </form>
-            </div> <!-- footer__col -->
+            </div> <!-- footer__col--1 -->
+
             <div class="footer__col footer__col--2">
                 <div class="footer__title">blogs</div>
-            </div>
+                <div class="blogs">
+                    <div class="blogs__item">
+                        <div class="blogs__icon">
+                            <img class="" alt="" src="img/blogs1.png">
+                        </div>
+                        <div class="blogs__content">
+                            <a href="#" class="blogs__text">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing
+                            </a>
+                            <div class="blogs__data">Jan 9, 2016</div>
+                        </div>
+                    </div>
+                    <div class="blogs__item">
+                        <div class="blogs__icon">
+                            <img class="" alt="" src="img/blogs2.png">
+                        </div>
+                        <div class="blogs__content">
+                            <a href="#" class="blogs__text">
+                                Consectetur adipiscing elit, sed do eiusmod tempor
+                            </a>
+                            <div class="blogs__data">Jan 9, 2016</div>
+                        </div>
+                    </div>
+                    <div class="blogs__item">
+                        <div class="blogs__icon">
+                            <img class="" alt="" src="img/blogs3.png">
+                        </div>
+                        <div class="blogs__content">
+                           <a href="#" class="blogs__text">
+                                sed do eiusmod tempor incididunt ut labore
+                            </a>
+                            <div class="blogs__data">Jan 9, 2016</div>
+                        </div>
+                    </div>
+                </div>
+            </div> <!-- footer__col--2 -->
+
             <div class="footer__col footer__col--3">
                 <div class="footer__title">instagram</div>
-            </div>
+                <div class="instagram">
+                    <a class="instagram__item" href="#">
+                        <img class="instagram__img" src="img/inst1.jpg" alt="">
+                    </a>
+                    <a class="instagram__item" href="#">
+                        <img class="instagram__img" src="img/inst2.jpg" alt="">
+                    </a>
+                    <a class="instagram__item" href="#">
+                        <img class="instagram__img" src="img/inst3.jpg" alt="">
+                    </a>
+                    <a class="instagram__item" href="#">
+                        <img class="instagram__img" src="img/inst4.jpg" alt="">
+                    </a>
+                    <a class="instagram__item" href="#">
+                        <img class="instagram__img" src="img/inst5.jpg" alt="">
+                    </a>
+                    <a class="instagram__item" href="#">
+                        <img class="instagram__img" src="img/inst6.jpg" alt="">
+                    </a>
+                    <a class="instagram__item" href="#">
+                        <img class="instagram__img" src="img/inst7.jpg" alt="">
+                    </a>
+                    <a class="instagram__item" href="#">
+                        <img class="instagram__img" src="img/inst8.jpg" alt="">
+                    </a>
+                    <a class="instagram__item" href="#">
+                        <img class="instagram__img" src="img/inst9.jpg" alt="">
+                    </a>
+                    <div class="instagram__text">View more photos</div>
+                </div> <!-- instagram -->
+            </div> <!-- footer__col--3 -->
         </div> <!-- footer__inner -->
     </div>
 </footer>
 
+<div class="copyright">
+    <div class="container">
+        <div class="copyright__text">© 2016 MoGo free PSD template by <span class="copyright__red">Laaqiq</span></div>
+    </div>
+</div>
 
 
 
