--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700|Roboto:300,300i,400,400i&display=swap" rel="stylesheet">
    <script src="https://kit.fontawesome.com/e31364d317.js" crossorigin="anonymous"></script>
@@ -37,16 +38,16 @@
         </div>
         <div class="slider">
             <div class="slider__item active">
-                <span class="slider__num">01 </span>Intro
+                <span class="slider__num">01 </span><span class="slider__text">Intro</span>
             </div>
             <div class="slider__item">
-                <span class="slider__num">02 </span>Work
+                <span class="slider__num">02 </span><span class="slider__text">Work</span>
             </div>
             <div class="slider__item">
-                <span class="slider__num">03 </span>About
+                <span class="slider__num">03 </span><span class="slider__text">About</span>
             </div>
             <div class="slider__item">
-                <span class="slider__num">04 </span>Contacts
+                <span class="slider__num">04 </span><span class="slider__text">Contacts</span>
             </div>
         </div>
     </div>
@@ -63,32 +64,38 @@
         </div>
         <div class="about">
             <div class="about__item">
-               <div class="about__img">
-                    <img src="img/section_1.png" alt="">
-                </div>
-                <div class="about__content">
-                   <img class="about__icon" src="img/users__icon.png" alt="">
-                    <div class="about__text">super team</div>
-                </div>
-            </div>
-
-            <div class="about__item">
-               <div class="about__img">
-                    <img src="img/section_2.png" alt="">
-                </div>
-                <div class="about__content">
-                   <img class="about__icon" src="img/users__icon.png" alt="">
-                    <div class="about__text">super team</div>
+              <div class="about__inner">
+                   <div class="about__img">
+                        <img src="img/section_1.png" alt="">
+                    </div>
+                    <div class="about__content">
+                       <img class="about__icon" src="img/users__icon.png" alt="">
+                        <div class="about__text">super team</div>
+                    </div>
                 </div>
             </div>
 
             <div class="about__item">
-               <div class="about__img">
-                    <img src="img/section_3.png" alt="">
+              <div class="about__inner">
+                   <div class="about__img">
+                        <img src="img/section_2.png" alt="">
+                    </div>
+                    <div class="about__content">
+                       <img class="about__icon" src="img/users__icon.png" alt="">
+                        <div class="about__text">super team</div>
+                    </div>
                 </div>
-                <div class="about__content">
-                   <img class="about__icon" src="img/users__icon.png" alt="">
-                    <div class="about__text">super team</div>
+            </div>
+
+            <div class="about__item">
+              <div class="about__inner">
+                   <div class="about__img">
+                        <img src="img/section_3.png" alt="">
+                    </div>
+                    <div class="about__content">
+                       <img class="about__icon" src="img/users__icon.png" alt="">
+                        <div class="about__text">super team</div>
+                    </div>
                 </div>
             </div>
         </div>
